# shader_import_minimal_example

./: Cargo.toml  LICENSE  README.md
main_crate/: Cargo.toml
main_crate/assets/shaders/: extended_material.wgsl
main_crate/src/: main.rs
main_crate/src/shaders/: extended_material.wgsl
shader_crate/: Cargo.toml
shader_crate/src/: lib.rs
shader_crate/src/shaders/: optional_shader.wgsl
